--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000/api
-REACT_APP_API_BASE_URL=http://localhost:8000
+REACT_APP_API_URL=https://documentor-1-backend-1.onrender.com/api
+REACT_APP_API_BASE_URL=https://documentor-1-backend-1.onrender.com
